<?xml version="1.0"?>
<package format="2">
  <name>rospy_websocker_client</name>
  <version>0.0.0</version>
  <description>The rospy_websocker_client package</description>

  <maintainer email="devittdv@gmail.com">Dmitry Devitt</maintainer>
  <license>MIT</license>

  <depend>catkin</depend>
  <depend>rostest</depend>
  <depend>rospy</epend>

  <depend>roslib</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
